# turing-soup

./: .gitignore  README.md  pyproject.toml
src/: cffi.py  comb.c  comb.h  comb.py  main.py  soup.py
src/c_soup/: Makefile  main.c  soup.c  soup.h
src/cpp_soup/: Makefile  soup.cpp  soup.h
src/scripts/: comb.py  soup.py
