[tool.poetry]
name = "life"
version = "0.1.0"
description = ""
authors = ["Guy Paterson-Jones <guy.paterson.jones@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.scripts]
soup = "src.scripts.soup:main"
comb = "src.scripts.comb:main"

[tool.poetry.dependencies]
python = "^3.10"
cffi = "^1.15.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
